# esp32-component-custom-certificates

./: CMakeLists.txt  Kconfig  LICENSE  README.md  custom_certificates.c
.github/workflows/: upload_component.yml
certificates/: tanmatsu_apps.pem  tanmatsu_ota.pem
