idf_component_register(
	SRCS
		"custom_certificates.c"
	INCLUDE_DIRS
		"."
	PRIV_REQUIRES
		esp_wifi
		esp-tls
	EMBED_TXTFILES
		"certificates/letsencrypt_isrg_root_x1.pem"
		"certificates/letsencrypt_isrg_root_x2.pem"
		"certificates/mch2022_ota.pem"
		"certificates/tanmatsu_apps.pem"
		"certificates/tanmatsu_ota.pem"
)
